--- a/index.html
+++ b/index.html
@@ -36,8 +36,25 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
+                        <select id="selDataset">
+                          <option value="Date">Date</option>
+                          <option value="City">City</option>
+                          <option value="State">State</option>
+                          <option value="Country">Country</option>
+                          <option value="Shape">Shape</option>
+                        </select>
+
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                          <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <!-- <label for="city">Enter a City</label>
+                          <input class="form-control" id="city" type="text" placeholder="Seattle">
+                        <label for="state">Enter a State</label>
+                          <input class="form-control" id="state" type="text" placeholder="California">
+                        <label for="country">Enter a Country</label>
+                          <input class="form-control" id="country" type="text" placeholder="US">
+                        <label for="shape">Enter a Shape</label>
+                          <input class="form-control" id="shape" type="text" placeholder="Circle"> -->
+
                       </li>
                     </ul>
                   </div>
