--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UFO Finder</title>
+  <title>UFO Sightings Data</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -23,7 +23,7 @@
     </nav>
     <div class="hero text-center">
       <h1>UFO Sightings</h1>
-      <p>The Truth is Out There</p>
+      <p>Search UFO sighting reports</p>
     </div>
     <div class="container">
       <div class="row margin-top-50">
@@ -45,7 +45,7 @@
                         </select>
 
                         <label for="date">Enter a Date</label>
-                          <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                          <input class="form-control" id="datetime" type="text" placeholder="1/11/2010">
                       
 
                       </li>
